<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="141dp"
        android:background="@color/lightMaroon"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="Register"
        android:textAlignment="center"
        android:textColor="@color/background"
        android:textSize="24sp" />

    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextText"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/edittextborder"
            android:drawableRight="@drawable/user"
            android:fontFamily="sans-serif-black"
            android:hint="@string/username"
            android:padding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextEmail"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/a"
        android:fontFamily="sans-serif-black"
        android:hint="@string/email"
        android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/key"
        android:fontFamily="sans-serif-black"
        android:hint="@string/password"
        android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp">
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextRepeatPassword"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/edittextborder"
        android:drawableRight="@drawable/repeat"
        android:fontFamily="sans-serif-black"
        android:hint="@string/repeatpassword"
        android:padding="10dp"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:background="@color/lightMaroon"
        android:fontFamily="sans-serif-black"
        android:text="Submit"
        android:textColor="@color/background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountcreated"
        android:textAlignment="center"
        android:textColor="@color/darkMaroon" />
</LinearLayout>